--- a/aula67/assets/css/style.css
+++ b/aula67/assets/css/style.css
@@ -2,6 +2,7 @@
 :root {
   --primary-color: rgb(191, 213, 218);
   --primary-color-darker: rgb(111, 152, 160);
+
 }
 
 * {
@@ -27,6 +28,39 @@ body {
   padding: 20px;
   border-radius: 10px;
 }
+
+.container h1, .container p {
+  text-align: center; /* Centraliza o texto horizontalmente */
+  color: #333; /* Cor do texto */
+  /* font-size: 24px;  */
+}
+
+.container p ::placeholder{
+  
+  font-family:Arial, Helvetica, sans-serif;
+  color: #b4abab;
+}
+
+.input-tarefa{
+ border-radius: 5px;
+ padding: 0.20rem;
+
+ border-color: #d3c9c9;
+}
+
+.btn-tarefa{
+  border-radius: 6px;
+}
+.apagar{
+  background: transparent;
+  border-color: transparent;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 1rem;
+  margin: 0 0.8rem;
+  color: #f55454;
+}
+
 
 form input, form label, form button {
   display: block;
