refactor: change alert color

--- a/aula67/assets/css/style.css
+++ b/aula67/assets/css/style.css
@@ -130,7 +130,7 @@ form button {
 
 .alert-sucess{
   position: absolute;
-  background: #93ce8b;
+  background: #bdebb7;
   color: #000000;
   top: 2px; /* Ajuste a posição de acordo com a sua necessidade */
   left: 50%; /* Posiciona o alerta no centro horizontalmente */
